plugins {
    id 'idea'
    id 'application'
    id 'maven-publish'
    id 'nebula.release' version '17.2.2'
    id 'org.ajoberstar.grgit' version '5.2.0'
}

group = 'dev.tomek'

java {
    sourceCompatibility = JavaVersion.VERSION_20
}

ext {
    picoCliVersion = '4.7.4'
    lombokVersion = '1.18.28'
    jacksonVersion = '2.15.2'
    mainClassName = 'dev.tomek.userinstaller.intellij.IntellijAppsInstaller'
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation "info.picocli:picocli:$picoCliVersion"
    annotationProcessor "info.picocli:picocli-codegen:$picoCliVersion"
    implementation 'ch.qos.logback:logback-classic:1.4.8'
    compileOnly "org.projectlombok:lombok:$lombokVersion"
    annotationProcessor "org.projectlombok:lombok:$lombokVersion"
    implementation "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
    implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
    implementation 'org.fusesource.jansi:jansi:2.4.0'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.assertj:assertj-core:3.24.2'
}

application {
    mainClass = project.mainClassName
}

compileJava {
    options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
}

jar {
    manifest {
        attributes([
            'Main-Class'         : project.mainClassName,
            "Application-Version": project.version,
            "Application-Commit" : grgit.head().id
        ])

    }
    duplicatesStrategy DuplicatesStrategy.INCLUDE
    from(configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }) {
        exclude "META-INF/*.SF"
        exclude "META-INF/*.DSA"
        exclude "META-INF/*.RSA"
        exclude "META-INF/LICENSE"
        exclude "META-INF/NOTICE"
        exclude "module-info.class"
    }
}

test {
    useJUnitPlatform()
}

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
        }
    }

    repositories {
        maven {
            url "https://gitlab.com/api/v4/projects/24570105/packages/maven"
            name "GitLab"
            credentials(HttpHeaderCredentials) {
                name = 'Deploy-Token'
                value = 'NqqBLQ225viSUndtM87Q'
            }
            authentication {
                header(HttpHeaderAuthentication)
            }
        }
    }
}
